--- a/src/app/AdminArea/update-nation/update-nation.component.html
+++ b/src/app/AdminArea/update-nation/update-nation.component.html
@@ -9,7 +9,7 @@
                 <label>
                     Nation
                     <select name="nation">
-                        <option *ngFor="let region of regions; index as i" value="{{region.code]]">{{ region.region }}</option>
+                        <option *ngFor="let region of regions; index as i" value="{{region.region_id]]">{{ region.region_name }}</option>
                     </select>
                 </label>
             </div>
