--- a/src/app/user-area/user-area.component.html
+++ b/src/app/user-area/user-area.component.html
@@ -2,7 +2,7 @@
 
     <h1>User Profile</h1>
     
-    <div class="registryForm">
+    <div class="Form">
         <form [formGroup]="updateUser">
             <div>
                 <label>
@@ -47,8 +47,10 @@
         <div>
             <div>
                     Characters
-                    <!-- ngfor  user_character de user_characters onde user_id = N -->
-                    <!-- link para character detail , onde dá para fazer update/remover character -->
+                    <div><!-- ngfor  user_character de user_characters onde user_id = N -->
+                        <a href=""><!-- link para character detail , onde dá para fazer update/remover character --></a>
+                    </div>
+                        
             </div>
         </div>
     </div>
