--- a/src/styles.scss
+++ b/src/styles.scss
@@ -59,6 +59,9 @@ strong { font-weight: 800; }
         p {
             color: white;
         };
+        h4 {
+            color: silver;
+        };
         transform: scale(1.3);
     }
 }
