--- a/src/app/religion/detailedreligion/detailedreligion.component.html
+++ b/src/app/religion/detailedreligion/detailedreligion.component.html
@@ -2,21 +2,25 @@
     
     <h1 class="detailedpage-header">{{ pantheon.pantheon_name }}</h1>
             
+    
+    <h2 class="text-align-center">Description</h2>
+    <div class="text-align-center" [innerHTML]="pantheon.pantheon_description | sanitizeHtml"></div>
+    
+    <h2 class="mainhub text-align-center">Places of Influence</h2>
+    <h3 class="text-align-center"> {{ pantheon.pantheon_scope }}</h3>
+    
     <div class="grid-area-big">
-    
-        <h2 class="text-align-center">Description</h2>
-        <div [innerHTML]="pantheon.pantheon_description | sanitizeHtml"></div>
-        
-        <h2 class="mainhub text-align-center">Places of Influence</h2>
-        <h3 class="text-align-center"> {{ pantheon.pantheon_scope }}</h3>
-    
         <div class="div-card margin-side text-align-center background-fill-white" *ngFor="let god of gods, index as i;">
             
             <h3 class="golden">{{god.god_name}}</h3>
 
+            <h4>Alignment</h4>
             <p class="smalldesccolor">{{god.god_alignment}}</p>
+            <h4>Domains</h4>
             <p class="smalldesccolor">{{god.god_domains}}</p>
+            <h4>Mysteries</h4>
             <p class="smalldesccolor">{{god.god_mysteries}}</p>
+            <h4>Favoured Weapon</h4>
             <p class="smalldesccolor">{{god.god_fav_weapon}}</p>
 
         </div>
