--- a/src/app/AdminArea/create-nation-trait/create-nation-trait.component.html
+++ b/src/app/AdminArea/create-nation-trait/create-nation-trait.component.html
@@ -3,17 +3,17 @@
     <h1>Create Nation Trait</h1>
     
     <div class="registryForm">
-        <form>
-            <!-- <h5 class="red-alert" role="alert" *ngIf="errorMessage">{{errorMessage}}</h5> -->
+        <form action="" [formGroup]="createTrait" (ngSubmit)="onSubmit()">
+            <h5 class="red-alert" role="alert" *ngIf="Message">{{Message}}</h5>
             <div>
                 <label>
                     Trait Name
-                    <input type="text" name="name" required="" minlength="8" maxlength="40">
+                    <input type="text" formcontrolname="trait_name" name="name" required="" minlength="8" maxlength="40">
                 </label>
             </div>
             <div>
                 Trait Description
-                <input type="text" name="description" required="">
+                <input type="text" formcontrolname="trait_description" name="description" required="">
             </div>
             <div>
                 <button type="submit" name="send">Submit</button>
