--- a/src/app/AdminArea/create-nation/create-nation.component.html
+++ b/src/app/AdminArea/create-nation/create-nation.component.html
@@ -5,7 +5,7 @@
     <div class="registryForm">
 
         <form [formGroup]="createNation" (ngSubmit)="onSubmit()">
-            <h5 class="red-alert" role="alert" *ngIf="errorMessage">{{errorMessage}}</h5>
+            <h5 class="red-alert" role="alert" *ngIf="Message">{{Message}}</h5>
             <div>
                 <label>
                     Region
@@ -46,12 +46,6 @@
                 Hub Description
                 <textarea name="nation_hub_description" fromControlName="nation_hub_description" rows="2" cols="30" required="">
                 </textarea>
-            </div>
-            <div>
-                <label>
-                    Banner
-                    <input type="file">
-                </label>
             </div>
             <div>
                 <label>
