--- a/src/app/AdminArea/delete-god/delete-god.component.html
+++ b/src/app/AdminArea/delete-god/delete-god.component.html
@@ -2,11 +2,21 @@
 
     <h1>Delete God</h1>
     
-    <form action="">
+    <form action="" [formGroup]="deleteGod">
+        
         <div>
             <label>
                 Which god you want to delete?
-                <option></option>
+                <select name="chosenGod">
+                    <option *ngFor="let god of gods; index as i" value="{{god.god_id]]">{{god.god_name}}</option>
+                </select>
+            </label>
+        </div>
+        <h5 class="red-alert" role="alert" *ngIf="Message">{{Message}}</h5>
+        <div>
+            <label>
+                <input type="checkbox" formControlName="checkbox" name="agrees" required="">
+                Please confirm if this is the item you want to delete
             </label>
         </div>
         <div>
