--- a/src/app/AdminArea/delete-nation-trait/delete-nation-trait.component.html
+++ b/src/app/AdminArea/delete-nation-trait/delete-nation-trait.component.html
@@ -1,5 +1,26 @@
 <section class="container">
 
-    <h1>Delete Nation Trait</h1>
+    <h1>Delete Trait</h1>
     
+    <form action="" [formGroup]="deleteTrait">
+        
+        <div>
+            <label>
+                Which Trait you want to delete?
+                <select name="chosenTrait">
+                    <option *ngFor="let trait of traits; index as i" value="{{trait.trait_id]]">{{trait.trait_name}}</option>
+                </select>
+            </label>
+        </div>
+        <h5 class="red-alert" role="alert" *ngIf="Message">{{Message}}</h5>
+        <div>
+            <label>
+                <input type="checkbox" formControlName="checkbox" name="agrees" required="">
+                Please confirm if this is the item you want to delete
+            </label>
+        </div>
+        <div>
+            <button type="submit" name="send">Delete</button>
+        </div>
+    </form>
 </section>
