--- a/src/app/AdminArea/update-god/update-god.component.html
+++ b/src/app/AdminArea/update-god/update-god.component.html
@@ -6,7 +6,7 @@
 
         <form action="" [formGroup]="chosenGod">
             <select name="godtobechosen" id="">
-                <option *ngFor="let god of gods; index as i" value="{{god.god_id]]">{{god.god_name}}</option>
+                <option *ngFor="let god of gods; index as i" value="{{god.god_id}}">{{god.god_name}}</option>
             </select>
         </form>
 
