--- a/src/app/nations/nationindetail/nationindetail.component.html
+++ b/src/app/nations/nationindetail/nationindetail.component.html
@@ -1,26 +1,34 @@
 <section>
     
-    <h1 class="detailedpage-header">{{ nation.nation_name }}</h1>
+    <h1 class="detailedpage-header">{{name}}</h1>
 
     <article class="two-page-grid">
         <div class="nationleftside">
              
              <h2 class="text-align-center">Description</h2>
-             <div [innerHTML]="nation.nation_description | sanitizeHtml"></div>
+             <div [innerHTML]="description | sanitizeHtml"></div>
     
              <h2 class="mainhub text-align-center">Main Hub</h2>
-             <h3> {{ nation.nation_hub }}</h3>
+             <h3> {{ hub }}</h3>
     
-            <div [innerHTML]="nation.nation_hub_description | sanitizeHtml"></div>
+            <div [innerHTML]="hubDesc | sanitizeHtml"></div>
         </div>
     
         <div class="nationrightside">
             
-            <div class="nationbanner" [innerHTML]="nation.nation_banner | sanitizeHtml"></div>           
+            <!-- <div class="nationbanner" [innerHTML]="nation.nation_banner | sanitizeHtml"></div>            -->
 
-            <h2 class="blue text-align-center">{{ nation.nation_name }} Traits </h2>
-    
-            <div [innerHTML]="nation.traits | sanitizeHtml"></div>
+            <h2 class="blue text-align-center">{{ name }} Traits </h2>
+
+            <div>
+                <ul>
+                    <li *ngFor="let trait of traits">
+                        <h3 class="blue text-align-center"> {{trait.trait_name}}</h3>
+                        <p [innerHTML]= "trait.trait_description | sanitizeHtml" ></p>
+                    </li>
+                </ul>
+
+            </div>
         </div>
     </article>
 </section>
