--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -15,7 +15,7 @@
         
         <div class="nationrightside">
             
-            <div class="nationbanner" [innerHTML]="order.order_banner | sanitizeHtml"></div>           
+            <!-- <div class="nationbanner" [innerHTML]="order.order_banner | sanitizeHtml"></div>            -->
             
             <h2 class="blue"><em>{{ order.order_official_name }}</em></h2>
             
