--- a/src/app/orders/orders.component.html
+++ b/src/app/orders/orders.component.html
@@ -10,7 +10,7 @@
       
       <a routerLink="/orders/{{order.order_id}}">
       
-      <div class="banner" [innerHTML]="order.order_banner | sanitizeHtml"></div>
+      <!-- <div class="banner" [innerHTML]="order.order_banner | sanitizeHtml"></div> -->
       <h3 class="golden">{{order.order_name}}</h3>
       <p><em>{{order.order_summary}}</em></p>
        
