--- a/src/app/religion/detailedreligion/detailedreligion.component.html
+++ b/src/app/religion/detailedreligion/detailedreligion.component.html
@@ -1,13 +1,13 @@
 <section>
     
-    <h1 class="detailedpage-header">{{ pantheon.pantheon_name }}</h1>
+    <h1 class="detailedpage-header">{{ pantheon_name }}</h1>
             
     
     <h2 class="text-align-center">Description</h2>
-    <div class="text-align-center" [innerHTML]="pantheon.pantheon_description | sanitizeHtml"></div>
+    <div class="text-align-center" [innerHTML]="pantheon_description | sanitizeHtml"></div>
     
     <h2 class="mainhub text-align-center">Places of Influence</h2>
-    <h3 class="text-align-center"> {{ pantheon.pantheon_scope }}</h3>
+    <h3 class="text-align-center"> {{ pantheon_scope }}</h3>
     
     <div class="grid-area-big">
         <div class="div-card margin-side text-align-center background-fill-white" *ngFor="let god of gods, index as i;">
